# chromeProfileManage

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/renderer/: index.html  renderer.js  styles.css
